# Paddle-Lite-linux-demo

image_classification_demo/shell/: CMakeLists.txt  demo_config.h.in  image_classification_demo.cc  image_classification_demo_resize.cc
image_classification_demo/shell/scripts/: build.sh  run.sh  run_arm.sh  run_nna.sh
libs/PaddleLite/arm64/include/: paddle_place.h  paddle_use_kernels.h  paddle_use_ops.h
libs/PaddleLite/arm64/lib/: libcrypto.so.1.1  libssl.so.1.1  libz.so.1.2.11
